--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         	</il>
         	   
         	<il>
-        	<div class="contact"> <span class="fa fa-globe fa-fw"></span> nicolasranc.com</div>
+        	<div class="contact"> <span class="fa fa-globe fa-fw"></span>nranc.github.io</div>
         	</il>
         	
         	<il>
