--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <h2 class="rubric"><i class="fa fa-heart-o ico"></i> Interests</h2>
         <ul>
         	<il>        	        			
-        		<div><a href="href="https://www.strava.com/athletes/7210422"><img id="strava" src="images/strava.png" alt="Strava Logo"></a></div>  	
+        		<div><a href="https://www.strava.com/athletes/7210422"><img id="strava" src="images/strava.png" alt="Strava Logo"></a></div>  	
         		<div class="interest">
         			Sports
           		</div> 	
