--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="style_index.css" />
+		<link href="style_index_mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" />
 		<title>Nicolas Ranc</title>
 	</head>
 	
