--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="style_index.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Nicolas Ranc</title>
 	</head>
 	
