--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		
 		<link rel="stylesheet" href="style_index.css" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Nicolas Ranc</title>
 	</head>
 	
