--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		
 		 	<ul class="menuliste">
-			<li><a href="index.html">About</a></li>
+			<li><a href="about.html">About</a></li>
 			<li><a href="resume.html">Resume</a></li>
 			<li><a href="index.html">Projects</a></li>
 			</ul>
