--- a/resume.html
+++ b/resume.html
@@ -154,11 +154,11 @@
         			Sports
           		</div> 	
         		
-        		<ul class="sport">        			
-        			<il>Tennis</il>
-        			<il>Fitness</il>       			
-        			<il>Running</il>           		
-        		</ul>
+        		<div class="sport">        			
+        			<p>Tennis</p>
+        			<p>Fitness</p>       			
+        			<p>Running</p>           		
+        		</div>
 
        		</il>
        		
