--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 		<link rel="stylesheet" href="style_index.css" />
+		<link rel="stylesheet" href="menu.css" />
 		<title>Nicolas Ranc</title>
 	</head>
 	
