--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style_resume.css" />
+		<link rel="stylesheet" href="menu.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 		<title>Nicolas Ranc</title>
@@ -12,9 +13,16 @@
 	
 	
 	
+		
 	<body>  
-		<div class="body">  
-        
+	<ul class="menuliste">
+			<li><a href="about.html">About</a></li>
+			<li><a href="resume.html">Resume</a></li>
+			<li><a href="index.html">Projects</a></li>
+		</ul>
+	
+	
+		<div class="body">          
         <div id="id">
 		            <img src="images/nranc.png" alt="Photo of Nicolas" />
 		            <h1>Nicolas Ranc</h1>
