--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
 		
 	<body>  
 	<ul class="menuliste">
-			<li><a href="about.html">About</a></li>
+			<li><a href="index.html">Reception</a></li>
 			<li><a href="resume.html">Resume</a></li>
 			<li><a href="index.html">Projects</a></li>
 		</ul>
