--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	
 	
 	<body>
+	
+		<div class="body">
 		
 		 	<ul class="menuliste">
 			<li><a href="index.html">About</a></li>
@@ -23,10 +25,11 @@
 		 <h1>Nicolas Ranc</h1>
 		 <h2>Software Engineer</h2>		 
 		 </div>	
-	</body>
-	
-	<footer>
-					<div id="place_icons">		
+		 
+		 </div>
+		 
+		<div class="footer">
+				<div id="place_icons">		
 						
 						<a href="https://www.linkedin.com/in/nicolas-ranc-593173109/" target="_blank" >				
 					 	<img class="icons" src="images/icons/linkedin.png" alt="Photo of Linkedin" width=50px height=50px/>
@@ -36,7 +39,8 @@
 					 <img class="icons" src="images/icons/strava.png" alt="Photo of Strava" width=50px height=50px/>
 					 </a>
 				</div>
-				</footer>
+		</div>
+	</body>
 				
 	
 </html>
