--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="body">
 		
 		 	<ul class="menuliste">
-			<li><a href="index.html">About</a></li>
+			<li><a href="about.html">About</a></li>
 			<li><a href="resume.html">Resume</a></li>
 			<li><a href="index.html">Projects</a></li>
 			</ul>
