--- a/resume.html
+++ b/resume.html
@@ -15,11 +15,13 @@
 	
 		
 	<body>  
+	
 	<ul class="menuliste">
-			<li><a href="index.html">Reception</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
 			<li><a href="resume.html">Resume</a></li>
 			<li><a href="index.html">Projects</a></li>
-		</ul>
+	</ul>
 	
 	
 		<div class="body">          
