--- a/about.html
+++ b/about.html
@@ -7,16 +7,17 @@
 		<link rel="stylesheet" href="style_resume.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-		<title>Nicolas Ranc</title>		
+		<title>Nicolas Ranc - About</title>		
 	</head>
 	
 	<body>
 	
 	<ul class="menuliste">
-			<li><a href="index.html">Home</a></li>
+		 	<li><a href="index.html">Home</a></li>
+			<li><a href="about.html"><span>About</span></a></li>
 			<li><a href="resume.html">Resume</a></li>
-			<li><a href="index.html">Projects</a></li>
-		</ul>
+			<li><a href="projects.html">Projects</a></li>
+	</ul>
 	
 	
 	<div class="body">
