--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 		<link rel="stylesheet" href="style_index.css" />
 		<link rel="stylesheet" href="menu.css" />
-		<title>Nicolas Ranc</title>
+		<title>Nicolas Ranc - Software Engineer</title>
 	</head>
 	
 	
@@ -15,9 +15,10 @@
 		<div class="body">
 		
 		 	<ul class="menuliste">
+		 	<li><a href="index.html"><span>Home</span></a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="resume.html">Resume</a></li>
-			<li><a href="index.html">Projects</a></li>
+			<li><a href="projects.html">Projects</a></li>
 			</ul>
 			
 		
