--- a/resume.html
+++ b/resume.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style_resume.css" />
 		<link rel="stylesheet" href="menu.css" />
+		<link rel="stylesheet" href="style_resume.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-		<title>Nicolas Ranc</title>
+		<title>Nicolas Ranc - Resume</title>
 		
 	</head>
 	
@@ -17,9 +17,10 @@
 	<body>  
 	
 	<ul class="menuliste">
-			<li><a href="index.html">Home</a></li>
+		 	<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="index.html">Projects</a></li>
+			<li><a href="resume.html"><span>Resume</span></a></li>
+			<li><a href="projects.html">Projects</a></li>
 	</ul>
 	
 	
