--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 				<div id="place_icons">		
 						
 						<a href="https://www.linkedin.com/in/nicolas-ranc-593173109/" target="_blank" >				
-					 	<img class="icons" src="images/icons/linkedin.png" alt="Photo of Linkedin" width=50 height=50/>
+					 	<img class="icons" src="images/icons/linkedin.png" alt="Photo of Linkedin" height="50" width="50"/>
 					 	</a>
 					 <div class="clear"></div>
 					 <a href="https://www.strava.com/athletes/7210422" target="_blank" >					 
-					 <img class="icons" src="images/icons/strava.png" alt="Photo of Strava" width=50 height=50/>
+					 <img class="icons" src="images/icons/strava.png" alt="Photo of Strava" height="50" width="50"/>
 					 </a>
 				</div>
 		</div>
