--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
         
 		        <li>
 		        	<div class="company">
-		        	<a href="https://www.thalesgroup.com/en/netherlands/global-presence-europe/netherlands"><img id="thales" src="images/Thales.png" alt="Thales Logo"></a> 
+		        	<a href="https://www.thalesgroup.com/en/netherlands/global-presence-europe/netherlands"><img class="thales" src="images/Thales.png" alt="Thales Logo"></a> 
 		        	<div class="place">
 		        		<div>Thales Nederland BV</div>
 		        		<div>(Hengelo - The Netherlands)</div>
@@ -56,7 +56,7 @@
 		        
 			    <li>
 			    	<div class="company">
-		        	<a href="https://www.thalesgroup.com/en/netherlands/global-presence-europe/netherlands"><img id="thales" src="images/Thales.png" alt="Thales Logo"></a> 
+		        	<a href="https://www.thalesgroup.com/en/netherlands/global-presence-europe/netherlands"><img class="thales" src="images/Thales.png" alt="Thales Logo"></a> 
 					<div class="place">
 		        		<div>Thales Nederland BV</div>
 		        		<div>(Hengelo - The Netherlands)</div>
