New text about -  mobile screen resume/about/project - style.cc main css

--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,13 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 		<link rel="stylesheet" href="menu.css" />
-		<link rel="stylesheet" href="style_resume.css" />		
+		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">		
 		<title>Nicolas Ranc - Projects</title>
 	</head>
 	
 	<body>
+	
 	
 	<ul class="menuliste">
 		 	<li><a href="index.html">Home</a></li>
@@ -18,18 +20,18 @@
 	</ul>
 	
 	<div class="projectliste">
-		<h1 class="rubric">Projects sumary</h1>
+		<h1 class="rubric">Sumary</h1>
 		<ul>		
-			<li><a href="#project1">Augmented Reality Project <span class="years">April 2016 - June 2016</span></a></li>
-			<li><a href="#project2">Transversal Project <span class="years">April 2016 - June 2016</span></a></li>
-			<li><a href="#project3">Video Game Project 2 : Superman <span class="years">December 2015 - January 2016</span></a></li>
-			<li><a href="#project4">WebSite Project : Les Gônes <span class="years">December 2015 - January 2016</span></a></li>
-			<li><a href="#project5">Video Game Project : Siam <span class="years">December 2015 - January 2016</span></a></li>		
+			<li><a href="#project1"><i class="fa fa-arrow-right ico"></i> Augmented Reality Project <div class="years">April 2016 - June 2016</div></a></li>
+			<li><a href="#project2"><i class="fa fa-arrow-right ico"></i> Transversal Project <div class="years">April 2016 - June 2016</div></a></li>
+			<li><a href="#project3"><i class="fa fa-arrow-right ico"></i> Video Game Project 2 : Superman <div class="years">December 2015 - January 2016</div></a></li>
+			<li><a href="#project4"><i class="fa fa-arrow-right ico"></i> WebSite Project : Les Gônes <div class="years">December 2015 - January 2016</div></a></li>
+			<li><a href="#project5"><i class="fa fa-arrow-right ico"></i> Video Game Project : Siam <div class="years">December 2015 - January 2016</div></a></li>		
 		</ul>
 	</div>
 	
 	<div class="project" id="project1">
-		<h1 class="rubric">Augmented Reality <span class="major">Image processing major</span></h1>
+		<h1 class="rubric">Augmented Reality <div class="major">Image processing major</div></h1>
 		<div class="subsection">
 			<h2 class="years">April 2016 - June 2016</h2>
 			<h3 class="code">C++</h3>
