--- a/projects.html
+++ b/projects.html
@@ -5,89 +5,94 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 		<link rel="stylesheet" href="menu.css" />
 		<link rel="stylesheet" href="style.css" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">		
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+				
 		<title>Nicolas Ranc - Projects</title>
 	</head>
 	
 	<body>
 	
-	
-	<ul class="menuliste">
-		 	<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="resume.html">Resume</a></li>
-			<li><a href="projects.html"><span>Projects</span></a></li>
-	</ul>
-	
-	<div class="projectliste">
-		<h1 class="rubric">Sumary</h1>
-		<ul>		
-			<li><a href="#project1"><i class="fa fa-arrow-right ico"></i> Augmented Reality Project <div class="years">April 2016 - June 2016</div></a></li>
-			<li><a href="#project2"><i class="fa fa-arrow-right ico"></i> Transversal Project <div class="years">April 2016 - June 2016</div></a></li>
-			<li><a href="#project3"><i class="fa fa-arrow-right ico"></i> Video Game Project 2 : Superman <div class="years">December 2015 - January 2016</div></a></li>
-			<li><a href="#project4"><i class="fa fa-arrow-right ico"></i> WebSite Project : Les Gônes <div class="years">December 2015 - January 2016</div></a></li>
-			<li><a href="#project5"><i class="fa fa-arrow-right ico"></i> Video Game Project : Siam <div class="years">January 2015 - March 2015</div></a></li>		
+		<!-- MENU -->
+		<ul class="menuliste">
+			 	<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="resume.html">Resume</a></li>
+				<li><a href="projects.html"><span>Projects</span></a></li>
 		</ul>
-	</div>
-	
-	<div class="project" id="project1">
-		<h1 class="rubric">Augmented Reality <div class="major">Image processing major</div></h1>
-		<div class="subsection">
-			<h2 class="years">April 2016 - June 2016</h2>
-			<h3 class="code">C++</h3>
-		</div>
-		<div>
-			<p>Add augmented reality to a stream from a camera. Using a C++ Object-Oriented Programming, formation of a mario mask (hat+moustache) when
-			someone appears at the screen. A two-player mode is possible and provides the opportunity to have two masks : Mario and a Leprechaun.</p>
-		</div>
-	</div>
-	
-	<div class="project" id="project2">
-		<h1 class="rubric">Transversal Project</h1>
-		<div class="subsection">
-			<h2 class="years">April 2016 - June 2016</h2>
-			<h3 class="code">C</h3>
-		</div>
-		<div>
-			<p>In a team consists of 7 people, join different modules and use several area of computing (Robotic, IT, Network) to produce a controlled robot.</p>
-		</div>
-	</div>
-	
-	<div class="project"  id="project3">
-		<h1 class="rubric">Video Game Project 2 : Superman</h1>
-		<div class="subsection">
-			<h2 class="years">December 2015 - January 2016</h2>
-			<h3 class="code">C++, OpenGL API</h3>
+		
+		<!-- PROJECTS -->
+		<div class="projectliste">
+			<h1 class="rubric">Sumary</h1>
+			<ul>		
+				<li><a href="#project1"><i class="fa fa-arrow-right ico"></i> Augmented Reality Project <div class="years">April 2016 - June 2016</div></a></li>
+				<li><a href="#project2"><i class="fa fa-arrow-right ico"></i> Transversal Project <div class="years">April 2016 - June 2016</div></a></li>
+				<li><a href="#project3"><i class="fa fa-arrow-right ico"></i> Video Game Project 2 : Superman <div class="years">December 2015 - January 2016</div></a></li>
+				<li><a href="#project4"><i class="fa fa-arrow-right ico"></i> WebSite Project : Les Gônes <div class="years">December 2015 - January 2016</div></a></li>
+				<li><a href="#project5"><i class="fa fa-arrow-right ico"></i> Video Game Project : Siam <div class="years">January 2015 - March 2015</div></a></li>		
+			</ul>
 		</div>
 		
-		<div>
-			<p>Create a one player video game. As a Superman, you have to save the world and avoid meteorites. Coded in C++ Object-Oriented Programming.</p>
+		<!-- PROJECT 1 -->
+		<div class="project" id="project1">
+			<h1 class="rubric">Augmented Reality <div class="major">Image processing major</div></h1>
+			<div class="subsection">
+				<h2 class="years">April 2016 - June 2016</h2>
+				<h3 class="code">C++</h3>
+			</div>
+			<div>
+				<p>Add augmented reality to a stream from a camera. Using a C++ Object-Oriented Programming, formation of a mario mask (hat+moustache) when
+				someone appears at the screen. A two-player mode is possible and provides the opportunity to have two masks : Mario and a Leprechaun.</p>
+			</div>
 		</div>
-	</div>
-	
-	<div class="project"  id="project4">
-		<h1 class="rubric">WebSite Project : Les Gônes</h1>
-		<div class="subsection">
-			<h2 class="years">December 2015 - January 2016</h2>
-			<h3 class="code">HTML, CSS, SQL, PHP</h3>
+		
+		<!-- PROJECT 2 -->
+		<div class="project" id="project2">
+			<h1 class="rubric">Transversal Project</h1>
+			<div class="subsection">
+				<h2 class="years">April 2016 - June 2016</h2>
+				<h3 class="code">C</h3>
+			</div>
+			<div>
+				<p>In a team consists of 7 people, join different modules and use several area of computing (Robotic, IT, Network) to produce a controlled robot.</p>
+			</div>
 		</div>
-		<div>
-			<p>Localhost website built with HTML and CSS about Lyon (Street art - Gastronomy).</p>
+		
+		<!-- PROJECT 3 -->
+		<div class="project"  id="project3">
+			<h1 class="rubric">Video Game Project 2 : Superman</h1>
+			<div class="subsection">
+				<h2 class="years">December 2015 - January 2016</h2>
+				<h3 class="code">C++, OpenGL API</h3>
+			</div>			
+			<div>
+				<p>Create a one player video game. As a Superman, you have to save the world and avoid meteorites. Coded in C++ Object-Oriented Programming.</p>
+			</div>
 		</div>
-	</div>
-	
-	<div class="project"  id="project5">
-		<h1 class="rubric">Video Game Project : Siam</h1>
-		<div class="subsection">
-		<h2 class="years">January 2015 - March 2015</h2>
-		<h3 class="code">C</h3>
+		
+		<!-- PROJECT 4 -->
+		<div class="project"  id="project4">
+			<h1 class="rubric">WebSite Project : Les Gônes</h1>
+			<div class="subsection">
+				<h2 class="years">December 2015 - January 2016</h2>
+				<h3 class="code">HTML, CSS, SQL, PHP</h3>
+			</div>
+			<div>
+				<p>Localhost website built with HTML and CSS about Lyon (Street art - Gastronomy).</p>
+			</div>
 		</div>
-		<div>
-			<p>Code SIAM video game in C language. Knowing functions declarations, imagine functions bodies. Procedural programming.</p>
+		
+		<!-- PROJECT 5 -->
+		<div class="project"  id="project5">
+			<h1 class="rubric">Video Game Project : Siam</h1>
+			<div class="subsection">
+			<h2 class="years">January 2015 - March 2015</h2>
+			<h3 class="code">C</h3>
+			</div>
+			<div>
+				<p>Code SIAM video game in C language. Knowing functions declarations, imagine functions bodies. Procedural programming.</p>
+			</div>
 		</div>
-	</div>
-	
-	
-	
+			
 	</body>
 </html>
